[package]
name = "dnspod-ddns"
authors = ["yinheli <me@yinheli.com>"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive", "env"] }
anyhow = "1.0.52"
reqwest = { version = "0.11.10", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = "1.0.137"
serde_json = "1"
tokio = { version = "1.18.2", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
# openssl = { version = "0.10.33", features = ["vendored"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
