[package]
name = "dnspod-ddns"
authors = ["yinheli <me@yinheli.com>"]
version = "0.1.8"
edition = "2021"
keywords = ["dnspod", "ddns"]
description = "Simple dnspod ddns tool"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive", "env"] }
anyhow = "1"
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = "1"
serde_json = "1"
tokio = { version = "1.20", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
chrono = "0.4"

[[bin]]
name = "dnspod-ddns"
path = "src/main.rs"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
