[package]
name = "dnspod-ddns"
authors = ["yinheli <me@yinheli.com>"]
version = "0.1.13"
edition = "2021"
keywords = ["dnspod", "ddns"]
description = "Simple dnspod ddns tool"
license = "MIT"
repository = "https://github.com/yinheli/dnspod-ddns"
homepage = "https://github.com/yinheli/dnspod-ddns"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[[bin]]
name = "dnspod-ddns"
path = "src/main.rs"


[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'
